Remove data after insert